# turtlebot3_manipulation_MAS500_Spring25

./: README.md
src/: run_liquid_classification_and_extraction.sh
src/analog_sensor/: UTGAATT__analog_publisher.py  package.xml  setup.cfg  setup.py  simple_read.py
src/analog_sensor/analog_sensor/: adc_publisher.py
src/captured_joint_positions/: joint_position.txt
src/turtlebot3_manipulation_description/urdf/: open_manipulator_x.urdf.xacro  turtlebot3_manipulation.urdf.xacro
src/turtlebot3_manipulation_moveit_config/config/: turtlebot3_manipulation.srdf
src/turtlebot3_manipulator_mas500/: CMakeLists.txt  package.xml
src/turtlebot3_manipulator_mas500/scr/: Qtip_liquid_sample.cpp  Qtip_liquid_sample_coo_v3.cpp  ReadJointState.cpp  Sensor_detect_liquid.cpp  Sensor_liquid_clasification.cpp
